fixed a bug in the navbar toggler, that when pressed it jumps 3 pixels up and removed the border when pressed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -71,7 +71,14 @@ https://stackoverflow.com/questions/36487389/bootstrap-4-card-deck-table-cell-co
 }
 
 .navbar .navbar-toggler {
+	margin-top: 3px;
 	border: 0;
+}
+
+.navbar-toggler:focus,
+.navbar-toggler:active {
+	outline: none;
+	box-shadow: none;
 }
 
 .navbar .navbar-nav .nav-link {
